--- a/CG_Cica/CG_Cica.vcxproj
+++ b/CG_Cica/CG_Cica.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="gCamera.h" />
     <ClInclude Include="GLconversions.hpp" />
     <ClInclude Include="MyApp.h" />
+    <ClInclude Include="Noise.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="ObjectFactory.h" />
     <ClInclude Include="ProgramObject.h" />
@@ -172,6 +173,7 @@
     <ClCompile Include="GLconversions.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MyApp.cpp" />
+    <ClCompile Include="Noise.cpp" />
     <ClCompile Include="ObjectFactory.cpp" />
     <ClCompile Include="ProgramObject.cpp" />
     <ClCompile Include="Scene.cpp" />
