--- a/CG_Cica/CG_Cica.vcxproj
+++ b/CG_Cica/CG_Cica.vcxproj
@@ -154,10 +154,12 @@
     <ClInclude Include="BufferObject.h" />
     <ClInclude Include="gCamera.h" />
     <ClInclude Include="GLconversions.hpp" />
+    <ClInclude Include="Mesh_OGL3.h" />
     <ClInclude Include="MyApp.h" />
     <ClInclude Include="Noise.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="ObjectFactory.h" />
+    <ClInclude Include="ObjParser_OGL3.h" />
     <ClInclude Include="ProgramObject.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="ShaderObject.h" />
@@ -172,9 +174,11 @@
     <ClCompile Include="gCamera.cpp" />
     <ClCompile Include="GLconversions.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mesh_OGL3.cpp" />
     <ClCompile Include="MyApp.cpp" />
     <ClCompile Include="Noise.cpp" />
     <ClCompile Include="ObjectFactory.cpp" />
+    <ClCompile Include="ObjParser_OGL3.cpp" />
     <ClCompile Include="ProgramObject.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="ShaderObject.cpp" />
