mivel is lövöldözzünk

--- a/CG_Cica/CG_Cica.vcxproj.filters
+++ b/CG_Cica/CG_Cica.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="Entity.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Turret.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyApp.cpp">
@@ -130,6 +133,9 @@
       <Filter>Hantos</Filter>
     </ClCompile>
     <ClCompile Include="Cat.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Turret.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
