--- a/CG_Cica/CG_Cica.vcxproj
+++ b/CG_Cica/CG_Cica.vcxproj
@@ -169,6 +169,7 @@
     <ClInclude Include="T:\OGLPack\include\imgui\imgui_impl_sdl_gl3.h" />
     <ClInclude Include="T:\OGLPack\include\imgui\imgui_internal.h" />
     <ClInclude Include="TextureObject.h" />
+    <ClInclude Include="Turret.h" />
     <ClInclude Include="VertexArrayObject.h" />
   </ItemGroup>
   <ItemGroup>
@@ -192,6 +193,7 @@
     <ClCompile Include="T:\OGLPack\include\imgui\imgui_demo.cpp" />
     <ClCompile Include="T:\OGLPack\include\imgui\imgui_draw.cpp" />
     <ClCompile Include="T:\OGLPack\include\imgui\imgui_impl_sdl_gl3.cpp" />
+    <ClCompile Include="Turret.cpp" />
     <ClCompile Include="VertexArrayObject.cpp" />
   </ItemGroup>
   <ItemGroup>
